# oh-my-council

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: TODO.md  index.sqlite3  phase2-runbook.md  phase3a-mcp-setup.md  phase3b-verify-setup.md  phase3c-budget-setup.md
docs/projects/2026-04-12-omc-projects-index/: council.sqlite3  requirement.md
docs/superpowers/plans/: 2026-04-12-oh-my-council-phase1-skeleton.md  2026-04-12-oh-my-council-phase2-real-backends.md  (+3 more)
src/omc/: __init__.py  budget.py  cli.py  config.py  dispatcher.py  dispatcher_async.py  mcp_server.py  models.py  notify.py  pricing.py  projects_index.py  state.py  verifier.py
src/omc/store/: md.py  (+4 more)
tests/: conftest.py  test_budget.py  test_claude_cli.py  test_cli_archive.py  test_cli_archive_stale.py  test_cli_budget.py  test_cli_mcp.py  test_cli_replay.py  test_cli_report.py  test_cli_run.py  test_cli_tail.py  test_cli_tmux.py  test_cli_verify.py  test_clients_fakes.py  test_codex_cli.py  test_config.py  test_dispatcher.py  test_dispatcher_async.py  test_dispatcher_budget.py  test_dispatcher_enforce.py  test_dispatcher_hallucination.py  test_e2e_fake.py  test_e2e_real.py  test_gates_hallucination.py  test_gates_path.py  test_gates_secrets.py  test_gates_syntax.py  test_mcp_budget.py  test_mcp_extensions.py  test_mcp_integration.py  test_mcp_server.py  test_mcp_verify.py  test_models.py  test_notify.py  test_pricing.py  test_projects_index.py  test_real_auditor.py  test_real_codex_escalation.py  test_real_codex_plan.py  test_real_codex_review.py  (+8 more)
(+16 files in other folders)
