[project]
name = "oh-my-council"
version = "0.1.0"
description = "Multi-agent orchestrator: Claude as PM, Codex as tech lead, GLM5 as worker"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.50,<2",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
omc = "omc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omc"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "slow: tests that require real API keys and network access",
]
addopts = "-ra -q -m 'not slow'"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
